fix finalizar peticion
