# backend/src/modules/products/products.controller.ts
@@ -14,6 +14,7 @@ export async function createProduct(
       catalogDescription: req.body.catalogDescription,
       date: req.body.date,
       pieceCount: req.body.pieceCount,
+      estimatedStartingPrice: req.body.estimatedStartingPrice,
       artist: req.body.artist,
       historicalDate: req.body.historicalDate,
       history: req.body.history,
@@ -114,6 +115,7 @@ export async function updateProduct(
       reviewerId: req.body.reviewerId,
       insurancePolicy: req.body.insurancePolicy,
       pieceCount: req.body.pieceCount,
+      estimatedStartingPrice: req.body.estimatedStartingPrice,
       artist: req.body.artist,
       historicalDate: req.body.historicalDate,
       history: req.body.history,
